[gd_scene load_steps=11 format=3 uid="uid://cncf27a8kaldm"]

[ext_resource type="Script" uid="uid://wx6kwmissftx" path="res://Scene/Prefabs/enemy_skeleton.gd" id="1_1760t"]
[ext_resource type="Texture2D" uid="uid://dupdjxmjjbm6l" path="res://Assets/New_Piskel_25_15.png" id="1_dcrwd"]
[ext_resource type="Texture2D" uid="uid://hddilgieqe36" path="res://Assets/ASSETS_Ours/Skeleton/Skeleton_original_.png" id="1_pokku"]
[ext_resource type="Script" uid="uid://b3qrh0nlj0cub" path="res://Scripts/follow_movement_c.gd" id="3_jmrvk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqndh"]
size = Vector2(12, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo0ni"]
atlas = ExtResource("1_dcrwd")
region = Rect2(64, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ftaic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo0ni")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_nwmvh"]
points = PackedVector2Array(0, 0, 30, -15, 30, 22)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwmvh"]
bg_color = Color(0.645396, 0.0245074, 0.385425, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pokku"]
bg_color = Color(0.804014, 0.258531, 0.0648084, 1)

[node name="Enemy_Skeleton" type="CharacterBody2D"]
script = ExtResource("1_1760t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_kqndh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, -2.75)
scale = Vector2(0.369141, 0.523438)
texture = ExtResource("1_pokku")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_kqndh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_ftaic")

[node name="FollowArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
position = Vector2(3, -7)
shape = SubResource("ConvexPolygonShape2D_nwmvh")

[node name="FollowMovementC" type="Node" parent="."]
script = ExtResource("3_jmrvk")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -4.0
offset_top = -22.0
offset_right = 10.0
offset_bottom = -16.0
theme_override_styles/background = SubResource("StyleBoxFlat_nwmvh")
theme_override_styles/fill = SubResource("StyleBoxFlat_pokku")
value = 100.0
show_percentage = false

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="FollowArea" to="FollowMovementC" method="_on_follow_area_body_entered"]
[connection signal="body_exited" from="FollowArea" to="FollowMovementC" method="_on_follow_area_body_exited"]
[connection signal="child_entered_tree" from="FollowMovementC" to="FollowMovementC" method="_on_child_entered_tree"]
